features:  * Add fixed height and overflow for results of a search.  * Add fixed position, and customized styles for the Pagination component.  * Add responsive queries for the results list.

--- a/src/App.css
+++ b/src/App.css
@@ -9,15 +9,15 @@
   margin: 1rem;
 }
 
-.header-container{
+.header-container {
   display: flex;
-  align-items:center;
+  align-items: center;
   justify-content: center;
   width: 100%;
   position: relative;
 }
 
-.logo-container{
+.logo-container {
   border-radius: 50px;
   border: 1px solid #ffffcf;
   margin: 0 8px;
@@ -45,6 +45,8 @@
   width: 100%;
   flex-wrap: wrap;
   justify-content: center;
+  height: 80vh;
+  overflow-y: scroll;
 }
 
 .input-search {
@@ -71,11 +73,9 @@ li {
   transition: background-color 0.2s ease-in-out;
 }
 
-.logo-rick-morty{
+.logo-rick-morty {
   width: 150px;
 }
-
-
 
 .highlight-text {
   color: yellow;
@@ -114,5 +114,17 @@ li:hover {
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@media only screen and (max-height: 768px) {
+  .filter-list-container {
+    height: 60vh;
+  }
+}
+
+@media only screen and (min-height: 769px) and (max-height: 1024px) {
+  .filter-list-container {
+    height: 75vh;
   }
 }
